--- a/odin-recipes/recipes/lasagna.html
+++ b/odin-recipes/recipes/lasagna.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Lasagna</h1>
-        <img src="../images/lasagna.jfif">
+        <img src="../images/lasagna.jfif" width="500" height="300">
         <h2>Description</h2>
         <p>This classic lasagna recipe is made with an easy meat sauce as the base. Layer the sauce with noodles and cheese, then bake until bubbly!</p>
         <p>This is great for feeding a big family and freezes well, too.</p>
