--- a/odin-recipes/recipes/pizza.html
+++ b/odin-recipes/recipes/pizza.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Pizza</h1>
-        <img src="../images/pizza.jpg">
+        <img src="../images/pizza.jpg" width="750" height="500">
         <h3>Description</h3>
         <p>This pepperoni pizza recipe produces a quick and easy classic!</p>
         <br>
