--- a/rock paper scissors/rockpaperscissors.html
+++ b/rock paper scissors/rockpaperscissors.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="rockpaperscissors.css">
 </head>
 <body>
-    <script src="rockpaperscissors.js"></script>    
+    <div id="welcome">
+        Here to play a game of rock paper scissors?
+    </div>  
+    <div id="buttons">
+        <button id="rock">ROCK</button>
+        <button id="paper">PAPER</button>
+        <button id="scissors">SCISSORS</button>
+    </div>
+    <div id="message">
+        waiting for user input...
+    </div>
+    <div id="result"></div>
 </body>
 </html>
