--- a/rock paper scissors/rockpaperscissors.html
+++ b/rock paper scissors/rockpaperscissors.html
@@ -19,5 +19,12 @@
         waiting for user input...
     </div>
     <div id="result"></div>
+
+    <div id="score">
+        <div id="scoreHuman">0</div>
+        <div id ="scoreComputer">0</div>
+    </div>
+    
+    <script src="rockpaperscissors.js"></script>
 </body>
 </html>
